# Nuevos Microservicios/Gestion_Matriculas/GestionMatriculas/app/controllers/MatriculasApiControllerImpInterface.java
@@ -1,8 +1,7 @@
 package controllers;
 
-import apimodels.GrupoAsignatura;
-import java.util.List;
 import apimodels.Matricula;
+import apimodels.MatriculaAlta;
 
 import play.mvc.Http;
 import java.util.List;
@@ -12,10 +11,9 @@ import java.util.HashMap;
 import javax.validation.constraints.*;
 
 public interface MatriculasApiControllerImpInterface {
-    boolean crearMatriculaNumeroExpedientePost(Integer numeroExpediente, List<GrupoAsignatura> grupos) throws Exception;
+    boolean crearMatriculaNumeroExpedientePost(Integer numeroExpediente, MatriculaAlta grupos) throws Exception;
 
     boolean realizarReservaNumeroExpedientePut(Integer numeroExpediente) throws Exception;
 
     List<Matricula> verExpedienteNumeroExpedienteGet(Integer numeroExpediente) throws Exception;
-
 }
