# Nuevos Microservicios/Gestion_Matriculas/GestionMatriculas/public/swagger.json
@@ -7,6 +7,36 @@
   },
   "host" : "localhost:9200",
   "paths" : {
+    "/creditosalumno/{numeroExpediente}" : {
+      "get" : {
+        "tags" : [ "Creditos_Alumno" ],
+        "summary" : "Creditos superados del alumno",
+        "description" : "Devuelve los créditos superados por parte del alumno que quiere hacer una nueva matricula",
+        "parameters" : [ {
+          "name" : "numeroExpediente",
+          "in" : "path",
+          "description" : "Numero de expediente del alumno.",
+          "required" : true,
+          "type" : "integer"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Operacion realizada con exito",
+            "schema" : {
+              "$ref" : "#/definitions/CreditosAlumno"
+            }
+          },
+          "405" : {
+            "description" : "Operacion sin realizar"
+          },
+          "500" : {
+            "description" : "Internal Server Error"
+          }
+        },
+        "x-contentType" : "application/json",
+        "x-accepts" : "application/json"
+      }
+    },
     "/asignaturasMatriculablesByAlumno/{numeroExpediente}" : {
       "get" : {
         "tags" : [ "Grupos_Asignaturas" ],
@@ -25,7 +55,7 @@
             "schema" : {
               "type" : "array",
               "items" : {
-                "$ref" : "#/definitions/Asignatura"
+                "$ref" : "#/definitions/Grupo_Asignatura"
               }
             }
           },
@@ -57,10 +87,7 @@
           "description" : "Grupos que el alumno ha decidido matricularse",
           "required" : true,
           "schema" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/definitions/Grupo_Asignatura"
-            }
+            "$ref" : "#/definitions/MatriculaAlta"
           }
         } ],
         "responses" : {
@@ -173,6 +200,21 @@
         }
       }
     },
+    "MatriculaAlta" : {
+      "type" : "object",
+      "required" : [ "Grupos", "TipoPago" ],
+      "properties" : {
+        "Grupos" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/Grupo_Asignatura"
+          }
+        },
+        "TipoPago" : {
+          "type" : "integer"
+        }
+      }
+    },
     "Matricula" : {
       "type" : "object",
       "required" : [ "Anno", "Asignaturas" ],
@@ -203,6 +245,21 @@
         },
         "Tipo" : {
           "type" : "string"
+        }
+      }
+    },
+    "CreditosAlumno" : {
+      "type" : "object",
+      "required" : [ "CreditosObligatorios", "CreditosOptativos", "CreditosTransversales" ],
+      "properties" : {
+        "CreditosObligatorios" : {
+          "type" : "integer"
+        },
+        "CreditosOptativos" : {
+          "type" : "integer"
+        },
+        "CreditosTransversales" : {
+          "type" : "integer"
         }
       }
     }
